Swap out twitter/github, fix wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,11 @@
 .contact-linkedin {
   font-size: 1.5em !important;
   padding: 6px 8px !important;
+
+}
+
+.letter-info p {
+    white-space: nowrap;
 }
    
    
